# playgroundforanathema

./: .gdb_history  Cargo.toml
src/: main.rs
templates/: aaa.tiny  aview.tiny  bbb.tiny  bug.tiny  counter.tiny  external.tiny  message.tiny  messages.tiny  meta.tiny  old.tiny  stats.tiny  template.tiny  weather.tiny
templates/app/: input.tiny  item.tiny  items.tiny  main.tiny  message.tiny  messages.tiny
