[package]
name = "playgroundforanathema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
anathema = { path = "../anathema" }
flume = "0.11.0"
# anathema = { path = "../../../temp/blob" }
log = "0.4.19"
# tinylog = { path = "../tinylog" }
